# cb-multios

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTORS  Dockerfile  README.md  build.ps1  build.sh  cbid_to_name.txt  genpolls.sh  linux-working.txt
.github/workflows/: ci.yml
broken/Finicky_File_Folder/: Makefile  README.md
broken/Ghost_In_The_CGC/: Makefile
broken/Gridder/: Makefile
broken/KPRCA_00053/: Makefile  README.md
broken/Mount_Filemore/: Makefile
broken/Neural_House/: Makefile
challenges/3D_Image_Toolkit/: CMakeLists.txt  README.md
challenges/AIS-Lite/: CMakeLists.txt
challenges/ASL6parse/: CMakeLists.txt
challenges/A_Game_of_Chance/: CMakeLists.txt
challenges/Accel/: CMakeLists.txt
challenges/Azurad/: CMakeLists.txt
challenges/BIRC/: README.md
challenges/Barcoder/: README.md
challenges/Bloomy_Sunday/: CMakeLists.txt
challenges/Blubber/: CMakeLists.txt
challenges/BudgIT/: CMakeLists.txt  README.md
challenges/CGC_File_System/: README.md
challenges/CGC_Hangman_Game/: CMakeLists.txt  README.md
challenges/CGC_Image_Parser/: CMakeLists.txt
challenges/CGC_Planet_Markup_Language_Parser/: CMakeLists.txt  README.md
challenges/CGC_Symbol_Viewer_CSV/: CMakeLists.txt
challenges/CLOUDCOMPUTE/: CMakeLists.txt
challenges/CML/: CMakeLists.txt
challenges/COLLIDEOSCOPE/: CMakeLists.txt
challenges/CableGrind/: README.md
challenges/Carbonate/: CMakeLists.txt  README.md
challenges/Casino_Games/: CMakeLists.txt
challenges/Character_Statistics/: CMakeLists.txt
challenges/Charter/: CMakeLists.txt  README.md
challenges/Checkmate/: CMakeLists.txt  README.md
challenges/Corinth/: CMakeLists.txt
challenges/Cromulence_All_Service/: CMakeLists.txt  README.md
challenges/DFARS_Sample_Service/: CMakeLists.txt
challenges/Diary_Parser/: CMakeLists.txt  README.md
challenges/Differ/: README.md
challenges/Divelogger2/: README.md
challenges/Document_Rendering_Engine/: README.md
challenges/Dungeon_Master/: CMakeLists.txt  README.md
challenges/Email_System_2/: CMakeLists.txt
challenges/Enslavednode_chat/: CMakeLists.txt  README.md
challenges/Estadio/: CMakeLists.txt
challenges/EternalPass/: CMakeLists.txt
challenges/FASTLANE/: README.md
challenges/FISHYXML/: CMakeLists.txt
challenges/FSK_Messaging_Service/: README.md
challenges/FUN/: CMakeLists.txt
challenges/FablesReport/: CMakeLists.txt
challenges/FaceMag/: CMakeLists.txt
challenges/Facilities_Access_Control_System/: CMakeLists.txt  README.md
challenges/FailAV/: CMakeLists.txt
challenges/Filesystem_Command_Shell/: CMakeLists.txt  README.md
challenges/Flight_Routes/: CMakeLists.txt
challenges/Fortress/: CMakeLists.txt  README.md
challenges/GREYMATTER/: CMakeLists.txt  README.md
challenges/Game_Night/: CMakeLists.txt  README.md
challenges/Glue/: CMakeLists.txt  README.md
challenges/GreatView/: CMakeLists.txt
challenges/Griswold/: CMakeLists.txt  README.md
challenges/H20FlowInc/: CMakeLists.txt
challenges/HIGHCOO/: CMakeLists.txt  README.md
challenges/HackMan/: README.md
challenges/Headscratch/: CMakeLists.txt
challenges/HeartThrob/: CMakeLists.txt
challenges/INSULATR/: CMakeLists.txt
challenges/Image_Compressor/: CMakeLists.txt  README.md
challenges/KKVS/: README.md
challenges/Kaprica_Go/: README.md
challenges/LAN_Simulator/: CMakeLists.txt
challenges/LMS/: CMakeLists.txt
challenges/Lazybox/: CMakeLists.txt  README.md
challenges/Loud_Square_Instant_Messaging_Protocol_LSIMP/: CMakeLists.txt  README.md
challenges/LulzChat/: CMakeLists.txt  README.md
challenges/Material_Temperature_Simulation/: CMakeLists.txt
challenges/Mathematical_Solver/: CMakeLists.txt
challenges/Matrix_Math_Calculator/: README.md
challenges/Messaging/: CMakeLists.txt
challenges/Minimalistic_Memo_Manager_3M/: README.md
challenges/Mixology/: CMakeLists.txt
challenges/Monster_Game/: CMakeLists.txt  README.md
challenges/Mount_Filemore/: CMakeLists.txt
challenges/Movie_Rental_Service_Redux/: README.md
challenges/Multi_Arena_Pursuit_Simulator/: README.md
challenges/Multi_User_Calendar/: README.md
challenges/Multicast_Chat_Server/: README.md
challenges/Multipass/: CMakeLists.txt
challenges/Multipass2/: CMakeLists.txt
challenges/Multipass3/: README.md
challenges/Music_Store_Client/: CMakeLists.txt
challenges/NarfAgainShell/: README.md
challenges/NarfRPN/: CMakeLists.txt  README.md
challenges/Network_File_System/: CMakeLists.txt
challenges/Network_Queuing_Simulator/: CMakeLists.txt
cmake/: 32.cmake  64.cmake
docs/: CGCFinalEventChallengeMapping.md  CGCQualifyingEventChallengeMapping.md
exclude/: osx.txt  win.txt  win_clangcl.txt  win_msvc.txt
include/: CMakeLists.txt  ansi_x931_aes128.c  ansi_x931_aes128.h  libcgc.c  libcgc.cpp  libcgc.h  libcgc_win.c  maths.S  maths_win.S  maths_win.asm
include/libpov/: CMakeLists.txt  LICENSE  cgc_config.h  cgc_pcre_internal.h  ctype.c  getenv.c  libpov.h  malloc.c  memcpy.c  memset.c  pcre_byte_order.c  pcre_chartables.c  pcre_compile.c  pcre_config.c  pcre_dfa_exec.c  pcre_exec.c  pcre_fullinfo.c  pcre_get.c  pcre_globals.c  pcre_internal.h  pcre_jit_compile.c  pcre_maketables.c  pcre_newline.c  pcre_ord2utf8.c  pcre_refcount.c  pcre_string_utils.c  pcre_study.c  pcre_tables.c  pcre_ucd.c  pcre_valid_utf8.c  pcre_version.c  pcre_xclass.c  pov.c  strchr.c  strcmp.c  strcpy.c  strlen.c  strtol.c  toupper.c
include/libpov/pov/: cgc_ctype.h  cgc_pcre.h  cgc_stdlib.h  cgc_string.h  cgc_types.h  ctype.h  limits.h  pcre.h  stdlib.h  string.h  types.h
include/tiny-AES128-C/: CMakeLists.txt  aes.c  aes.h
original-challenges/: README.md
tools/: ansi_x931_aes128.py  cb-replay  cb-replay-pov  cb-replay-pov.py  cb-replay.py  cb-runOne.py  cb-test  cb-test.py  cb_challenge_runner.py  cb_patcher.py  cb_simple_server.py  cb_tester.py  cb_wrapper.py  cgc_replacer.py  challenge_runner.py  common.py  makefiles.py  manual_patches.yaml  manual_patches_c.yaml  manual_patches_cpp.yaml  mathreplacer.py  patcher.py  server.py  tester.py  win_enable_dumps.reg
(+20506 files in other folders)
